<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout_cadastrar"
    android:padding="8dp"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTarNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/tarNomeText" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTarNome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextTarDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:gravity="top"
            android:textSize="16sp"
            android:hint="@string/tarDescText"
            android:ems="10"
            android:inputType="textMultiLine" />
    </ScrollView>

    <TextView
        android:id="@+id/prioridadeText"
        android:layout_width="wrap_content"
        android:text="@string/tarPrioridadeText"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.02"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/prioridadeText"
        app:layout_constraintBottom_toBottomOf="@id/prioridadeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/prioridadeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioBaixa"
            android:text="@string/baixa"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radioMedia"
            android:text="@string/media"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radioAlta"
            android:textSize="14sp"
            android:text="@string/alta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <EditText
        android:id="@+id/editTextTarPrazo"
        android:layout_width="wrap_content"
        android:hint="@string/tarPrazoText"
        android:textSize="16sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/prioridadeText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:inputType="number"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/checkBoxNotificacao"
        android:layout_width="wrap_content"
        android:text="@string/checkboxText"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTarPrazo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:textSize="14sp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnCadastrarTar"
        style="@style/buttonTheme"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/checkBoxNotificacao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:padding="10dp"
        android:text="@string/cadastrarTarText"
        android:textSize="16sp"
        android:layout_height="wrap_content" />
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editTextTarNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:inputType="text"
                android:hint="@string/tarNomeText" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextTarDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    android:gravity="top"
                    android:textSize="16sp"
                    android:hint="@string/tarDescText"
                    android:ems="10"
                    android:inputType="textMultiLine" />
            </ScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/tarPrioridadeText"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioBaixa"
                    android:text="@string/baixa"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioMedia"
                    android:text="@string/media"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioAlta"
                    android:textSize="14sp"
                    android:text="@string/alta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
            <EditText
                android:id="@+id/editTextTarPrazo"
                android:layout_width="wrap_content"
                android:hint="@string/tarPrazoText"
                android:textSize="16sp"
                android:layout_margin="8dp"
                android:inputType="number"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/checkBoxNotificacao"
                android:layout_width="wrap_content"
                android:text="@string/checkboxText"
                android:layout_margin="8dp"
                android:textSize="14sp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnCadastrarTar"
                style="@style/buttonTheme"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:text="@string/cadastrarTarText"
                android:textSize="16sp"
                android:layout_height="wrap_content" />
        </LinearLayout>-->
</android.support.constraint.ConstraintLayout>